k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zero-downtime
  name: zero-downtime
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: zero-downtime
  type: ClusterIP
